[gd_scene load_steps=5 format=3 uid="uid://b6e5clcrioodm"]

[ext_resource type="Script" uid="uid://cwmujphakr5tc" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="FontFile" uid="uid://clj15jl3dlmcl" path="res://Assets/Fonts/alagard_by_pix3m-d6awiwp.ttf" id="2_ce3w2"]
[ext_resource type="FontFile" uid="uid://bqh0ykx0lrbmn" path="res://Assets/Fonts/_bitmap_font____romulus_by_pix3m-d6aokem.ttf" id="3_ce3w2"]
[ext_resource type="AudioStream" uid="uid://bacjlefmxgmax" path="res://Assets/Audio/HeroesOfLumora-STMix.ogg" id="3_n45e2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 495.0
offset_bottom = 215.0
script = ExtResource("1_1ehe0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 195.0

[node name="title" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 312.0
offset_top = 16.0
offset_right = 840.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("2_ce3w2")
theme_override_font_sizes/font_size = 65
text = "Heroes of Lumora"
horizontal_alignment = 1

[node name="menu_container" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 256.0
offset_right = 704.0
offset_bottom = 384.0

[node name="start_button" type="Button" parent="menu_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ce3w2")
theme_override_font_sizes/font_size = 30
text = "Start Introduction"

[node name="skip_button" type="Button" parent="menu_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ce3w2")
theme_override_font_sizes/font_size = 30
text = "Skip Intro"

[node name="scores_button" type="Button" parent="menu_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ce3w2")
theme_override_font_sizes/font_size = 30
text = "High Scores"

[node name="quit_button" type="Button" parent="menu_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ce3w2")
theme_override_font_sizes/font_size = 30
text = "Run Away"

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_n45e2")
volume_db = -7.0
autoplay = true
parameters/looping = true

[connection signal="pressed" from="menu_container/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="menu_container/skip_button" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="menu_container/scores_button" to="." method="_on_scores_button_pressed"]
[connection signal="pressed" from="menu_container/quit_button" to="." method="_on_quit_button_pressed"]
